language/move-lang/tests/move_check/parser/unicode/non_whitespace_in_documentation_line_comment.move
address 0x1 {

/// For now, Unicode in documentation comments like this one is 🆖.
module Temp {
}

}
